--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,33 +1,48 @@
 
 .large-hero{
+	border-bottom: 10px solid $color_title; 
 	position:relative;
+
+	&__image{
+		display: block;
+	}
 	
 	&__text-content{
-	position: absolute;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	width: 100%;
-	text-align: center;
+		position: absolute;
+		top: 50%;
+		left: 0;
+		transform: translateY(-50%);
+		width: 100%;
+		text-align: center;
 	}
 
 	&__title{
 		font-weight: 300;
 		color:$color_title;
-		font-size: 4.8rem;
+		font-size: 2.1rem;
 		margin: 0;
+		@mixin atSmall{
+			font-size: 4.8rem;
+		}
+
 	}
 
 	&__subtitle{
 		font-weight: 300;
 		color:$color_subtitle;
-		font-size: 2.9rem;
+		font-size: 1.5rem;
 		margin: 0;
+		@mixin atSmall{
+			font-size: 2.9rem;
+		}
 	}
 
 	&__description{
 		color: $color_description;
-		font-size: 1.5rem;
+		font-size: 1.1rem;
+		@mixin atSmall{
+			font-size: 1.875rem;
+		}
 	}
 }
 
